# solusek

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
.github/workflows/: ccpp.yml
sample-server/: CMakeLists.txt  main.cpp
src/: solusek.cpp
src/client/: CClient.cpp  CClient.h
src/handlers/: CDatabaseHandler.h  CDatabaseHandler_empty.cpp  CDatabaseHandler_mysql.cpp  CDatabaseHandler_pqxx.cpp  CNetHandler.h  CNetHandler_linux.cpp  CNetHandler_openssl.cpp  CThreadHandler.h  CThreadHandler_linux.cpp
src/include/solusek/: EErrorCode.h  EFlag.h  IClient.h  IConfig.h  IDatabase.h  IDatabaseInstance.h  IFlagCollection.h  ILog.h  INetHandlerSocket.h  IServer.h  ISession.h  ITransaction.h  MCookie.h  MDatabaseHandle.h  MEndpoint.h  MErrorResponse.h  MFlag.h  MKey.h  MMimeType.h  MRequest.h  MResponse.h  MStaticEndpoint.h  file_util.h  solusek.h  string_util.h
src/server/: CConfig.cpp  CConfig.h  CDatabase.cpp  CDatabase.h  CDatabaseHandle.h  CDatabaseInstance.cpp  CDatabaseInstance.h  CFlagCollection.h  CLog.cpp  CLog.h  CNode.cpp  CNode.h  CServer.cpp  CServer.h  CServerConfig.h  CSession.cpp  CSession.h  CTransaction.cpp  CTransaction.h  CTrustStore.h  CVarVal.h  SDatabase.h
src/util/: file_util.cpp  string_util.cpp
static/css/: design.css
static/solusek/: index.html
